[tool.poetry]
name = "games"
version = "0.1.0"
description = ""
authors = ["Jon Atkinson <jon@jonatkinson.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipdb = "^0.13.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
